--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Tapan Basak</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/tapanbasak12/resume/raw/main/CV_TAPAN_BASAK%20.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url="https://github.com/tapanbasak12/resume/raw/main/CV_TAPAN_BASAK%20.pdf&embedded=true" style="width:80%; height:80%;" frameborder="0"></iframe>
   </body>
 </html>
